[package]
name = "rust-websockets"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-channel = "0.3.30"
futures-util = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.19", features = ["rustls-tls-native-roots"] }
url = "2.2.2"
